Enhance hikvision.yaml with device settings
Added port, protocol, and SSL settings for device configuration.

--- a/config/hikvision.yaml
+++ b/config/hikvision.yaml
@@ -1,9 +1,13 @@
 devices:
   - name: "GA4818739"
     ip: "37.18.105.89"
+    port: 80                # ISAPI HTTP порт
+    protocol: "http"        # принудительно HTTP, не https
+    ssl: false              # отключаем проверку SSL полностью
     username: "admin"
     password: "Ee40060840"
-    mode: "alert_stream"   # or "callback"
+    mode: "alert_stream"    # режим получения событий
+
 listener:
   host: "0.0.0.0"
   port: 8099
