--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,7 +2,7 @@ server:
   host: 0.0.0.0
   port: 8001          # ISUP TCP
   health_check_port: 8081
-  log_level: INFO
+  log_level: DEBUG
   storage_path: ./data/storage
   max_pending_days: 30
 
